# rewards

./: .env.example  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  build.rs  config.toml.example  rustfmt.toml  setup.bat  setup.sh
.github/: dependabot.yml
.github/workflows/: build.yml  check-formatting.yml
config/: Cargo.toml
config/src/: lib.rs
migrations/: 20210526114726_create.sql  20210528210938_bttv.sql  20210529174435_ffz.sql  20210530191358_bttv-slots.sql  20210601135912_logs.sql  20210602173250_spotify.sql  20210605215114_more_slots.sql  20210609221657_intro_pause.sql  20210611120024_emote_info.sql  20210613213233_initial_cleanup.sql  20210613231557_cascade_users.sql  20210621201613_seventv.sql  20210623200547_timeouts.sql  20210624094835_fix_timeouts.sql  20210710185743_spotify_live.sql  20210728134943_swap_emotes.sql  20210728142350_platform_unite.sql  20210808094307_drop_history.sql  20210810115643_remove_timeouts.sql  20210813211604_discord_user_logging.sql  20220217125641_banned_emotes.sql  20221203204638_timeout.sql  20230428150854_auto_accept.sql  20230701120245_more_logs.sql  20241023155336_new_seventv_id.sql  20241023161538_new_seventv_id_2.sql  20241025180253_new_seventv_id_3.sql  20250310103117_eventsub2.sql  20260126160001_swap_reward_id.sql  20260126180349_swap_reward_index.sql  20260131144203_spotify_commands.sql
models/: Cargo.toml
models/src/: banned_emote.rs  config.rs  discord.rs  editor.rs  emote.rs  eventsub.rs  lib.rs  log_entry.rs  reward.rs  slot.rs  spotify.rs  swap_emote.rs  timed_mode.rs  user.rs
setup/: Cargo.toml
setup/src/: main.rs
sql/: create_db.sql
src/: config.rs  constants.rs  main.rs
src/actors/: chat_actor.rs  db_actor.rs  irc_actor.rs  live_actor.rs  mod.rs  pubsub_actor.rs  slot_actor.rs  timeout_actor.rs  token_refresher.rs
src/actors/chat/: messages.rs  mod.rs
src/actors/db/: messages.rs  mod.rs
src/actors/discord/: messages.rs  mod.rs
src/actors/irc/: messages.rs  mod.rs  token_storage.rs
src/actors/live/: messages.rs  mod.rs
src/actors/messages/: chat_messages.rs  db_messages.rs  irc_messages.rs  mod.rs  pubsub_messages.rs
src/actors/pubsub/: messages.rs  mod.rs  token_provider.rs
src/actors/rewards/: messages.rs  mod.rs
src/actors/slot/: messages.rs  mod.rs
src/actors/supinic/: mod.rs
src/actors/timeout/: messages.rs  mod.rs
src/actors/token_refresher/: mod.rs
src/chat/: command.rs  mod.rs  parse.rs
src/chat/commands/: about.rs  emote_info.rs  emote_management.rs  emotes.rs  mod.rs  ping.rs  slots.rs
src/chat/commands/debug/: channel.rs  emotes.rs  mod.rs  platforms.rs  sync.rs
src/chat/commands/emote_management/: banning.rs  eject.rs  extract.rs  info.rs  inject.rs  mod.rs  reload.rs
src/chat/commands/spotify/: info.rs  mod.rs  skip.rs
src/extractors/: eventsub.rs  jwt.rs  mod.rs
src/guards/: eventsub.rs  mod.rs
src/middleware/: eventsub.rs  metrics.rs  mod.rs  useragent.rs
src/models/: bttv_slot.rs  config.rs  discord.rs  editor.rs  emote.rs  log_entry.rs  mod.rs  reward.rs  slot.rs  spotify.rs  swap_emote.rs  timed_mode.rs  timeout.rs  user.rs
src/repositories/: auth.rs  connections.rs  editors.rs  eventsub.rs  logs.rs  mod.rs  rewards.rs  user.rs
src/services/: discord.rs  errors.rs  eventsub.rs  formatting.rs  h2h.rs  jwt.rs  metrics.rs  mod.rs  redemptions.rs  rewards.rs  sql.rs  supinic.rs  text.rs  timed_mode.rs
src/services/bttv/: mod.rs  requests.rs  slots.rs  swap.rs
src/services/discord/: macros.rs  mod.rs
src/services/emotes/: add.rs  bttv.rs  execute.rs  ffz.rs  format.rs  mod.rs  refresh.rs  remove.rs  search.rs  seven_tv.rs  slots.rs  swap.rs
src/services/errors/: json_error.rs  macros.rs  mod.rs  redirect_error.rs
src/services/ffz/: mod.rs  requests.rs
src/services/ivr/: mod.rs
src/services/rewards/: execute.rs  extract.rs  mod.rs  redemption.rs  reply.rs  save.rs  verify.rs
src/services/seven_tv/: mod.rs  requests.rs
src/services/spotify/: auth.rs  mod.rs  requests.rs  responses.rs  rewards.rs
src/services/twitch/: errors.rs  eventsub.rs  mod.rs  requests.rs  token.rs
src/util/: result.rs
web/: .env.example  .eslintrc.json  .prettierrc  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.vue  async-state.ts  index.css  injection.ts  main.ts  router.ts  shims-vue.d.ts  store.ts  utilities.ts
web/src/api/: ApiClient.ts  BaseClient.ts  model-conversion.ts  plugin.ts  rewards-data.ts  types.ts
web/src/components/: ActionCategory.vue  ActionDialog.vue  ActionEditor.vue  ActionType.vue  AddOrEditRewardDialog.vue  DialogButtons.vue  DiscordSettings.vue  EmoteImage.vue  MainLayout.vue  NavBar.vue  Reward.vue  RewardEditor.vue  SwapEmotesTable.vue  UntrackButton.vue
web/src/components/core/: BaseInput.vue  CButton.vue  CDialog.vue  CDropdown.vue  CLoader.vue  CSlider.vue  CSwitch.vue  Heading.vue  NumberField.vue  OutlinedButton.vue  SubHeading.vue  TextField.vue
web/src/components/icons/: BackIcon.vue  ChevronDown.vue  DeleteIcon.vue  DiscordIcon.vue  EditIcon.vue  GithubIcon.vue  LogIcon.vue  PlaneIcon.vue  PlusIcon.vue  ReloadIcon.vue  SortDirection.vue  SpotifyIcon.vue  SyncIcon.vue  TickIcon.vue  TrashIcon.vue  TwitchIcon.vue  WarnIcon.vue
web/src/components/rewards/: BttvSlotSettings.vue  EmoteSlotSettings.vue  EmoteSwapSettings.vue  RemEmoteSettings.vue  SESettings.vue  SpotifyPlayOptions.vue  TSESettings.vue  TimeoutSettings.vue
web/src/hooks/: use-broadcaster.ts  use-rewards.ts
web/src/routes/: BroadcasterDashboard.vue  ConnectionsDashboard.vue  EditReward.vue  EditorsDashboard.vue  FailedAuth.vue  Home.vue  LogViewer.vue  NewReward.vue  NotFound.vue  RewardsDashboard.vue  SwapEmoteDashboard.vue  TestRewardEditor.vue
