[package]
name = "rewards"
version = "0.2.1"
authors = ["Nerixyz"]
edition = "2021"

[workspace]
members = [".", "setup", "models", "config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-postgres = "0.14"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "json",
    "chrono",
] }

models = { path = "models" }
config = { path = "config" }

actix = "0.13.5"
actix-web = "4.12.0"
actix-files = "0.6.8"
actix-cors = "0.7.1"
actix-utils = "3.0.0"
actix-web-prom = "0.10.0"

twitch-irc = { version = "5.0.1", features = [
    "refreshing-token-native-tls",
    "transport-tcp-native-tls",
    "metrics-collection",
] }
twitch_api = { git = "https://github.com/twitch-rs/twitch_api.git", features = [
    "eventsub",
    "helix",
    "twitch_oauth2",
    "reqwest",
    "client",
    "unsupported",
    "typed-builder",
], default-features = false }
twitch-pubsub = { git = "https://github.com/Nerixyz/twitch-pubsub-rs", features = [
    "unsupported",
], default-features = false }

tokio = { version = "1", features = ["rt", "time", "sync"] }
tokio-stream = "0.1"
futures-util = "0.3"
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.15"

deadpool-redis = { version = "0.22", default-features = false, features = [
    "rt_tokio_1",
] }

dotenv_codegen = "0.15"
dotenv = "0.15"

cookie = "0.18"
reqwest = { version = "0.12", features = ["cookies", "json"] }

jsonwebtoken = "10.2"

humantime = "2.3"
chrono = "0.4"
time = "0.3"

prometheus = "0.14.0"
uptimer = { git = "https://github.com/Nerixyz/uptimer.git" }

anyhow = "1.0"
errors = { git = "https://github.com/Nerixyz/nerix-utils-rs" }
derive_more = { version = "2.0", features = ["display"] }
async-trait = "0.1"
thiserror = "2.0"

itertools = "0.14.0"
paste = "1.0"
base64 = "0.22"
hex = "0.4"
rand = "0.9"
regex = "1.12"
percent-encoding = "2.3"
either = "1.15"
url = "2.5"

lazy_static = "1.5"
once_cell = "1.21"

pin-project = "1.1"
async-stream = "0.3"

env_logger = "0.11.8"
log = "0.4"

sha2 = "0.10"
hmac = "0.12"

# workaround for https://github.com/twitch-rs/twitch_api/issues/256
[patch.crates-io.twitch_types]
git = "https://github.com/twitch-rs/twitch_api.git"
[patch.crates-io.twitch_oauth2]
git = "https://github.com/twitch-rs/twitch_api.git"

[build-dependencies]
git_info = "0.1.3"
rustc_version = "0.4.1"
