[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.5.10", features = ["postgres", "macros", "json", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
errors = { git = "https://github.com/Nerixyz/nerix-utils-rs", tag = "errors-v0.2.1", features = ["sql-result", "sql-log"] }
twitch-irc = { version = "3.0.1", features = ["refreshing-token", "transport-tcp-native-tls", "metrics-collection"] }
twitch_api2 = { git = "https://github.com/emilgardis/twitch_api2", rev = "7194ec0", features = ["eventsub", "helix", "twitch_oauth2", "reqwest_client", "client", "unsupported"], default-features = false }
chrono = "0.4"
futures = "0.3"
http = "0.2"
derive_more = "0.99"

config = { path = "../config" }