[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = [
    "postgres",
    "macros",
    "json",
    "chrono",
    "runtime-tokio",
    "tls-native-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
errors = { git = "https://github.com/Nerixyz/nerix-utils-rs", features = [
    "sql-result",
    "sql-log",
] }
twitch-irc = { version = "5.0.1", features = [
    "refreshing-token-native-tls",
    "transport-tcp-native-tls",
    "metrics-collection",
] }
twitch_api = { git = "https://github.com/twitch-rs/twitch_api.git", features = [
    "eventsub",
    "helix",
    "twitch_oauth2",
    "reqwest",
    "client",
    "unsupported",
], default-features = false }

chrono = "0.4"
futures = "0.3"
http = "0.2"
derive_more = { version = "1.0", features = ["display"] }

config = { path = "../config" }
