[package]
name = "setup"
version = "0.1.0"
authors = ["Nerixyz"]
edition = "2021"

[[bin]]
name = "setup"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
twitch_oauth2 = { version = "0.13", features = ["reqwest"] }
tokio = { version = "1", features = ["macros", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15.0"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.11.0"
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
anyhow = "1"
