[package]
name = "setup"
version = "0.1.0"
authors = ["Nerixyz"]
edition = "2021"

[[bin]]
name = "setup"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
twitch_oauth2 = { version = "0.15.2", features = ["reqwest"] }
tokio = { version = "1", features = ["macros", "fs"] }
reqwest = "0.12"
dotenv = "0.15.0"
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.11.1"
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.23"
